--- a/language/expressions.xml
+++ b/language/expressions.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 1.8 $ -->
+<!-- $Revision: 1.9 $ -->
 <!-- EN-Revision: 1.20 -->
  <chapter id="language.expressions">
    <title>표현식</title>
@@ -144,9 +144,9 @@ $e = $d = ++$b;     /* 전처리-증가, $b가 증가된 값이 적용됨
 
 /* 여기서, $d와 $e는 6과 같다 */
 
-$f = double($d++);  /* 증가되기 <emphasis>전의</emphasis> $d값의 두배가 적용됨
+$f = double($d++);  /* 증가되기 전의 $d값의 두배가 적용됨
                        $f는  2*6 = 12가 됨 */
-$g = double(++$e);  /* 증가된 <emphasis>후의</emphasis> $e값의 두배가 적용됨
+$g = double(++$e);  /* 증가된 후의 $e값의 두배가 적용됨
                        $g는  2*7 = 14가 됨 */
 $h = $g += 10;      /* 우선, $g는 10만큼 증가되어 24가 됨.
                        지정된 값 (24)가 $h로 지정된다.
