--- a/language/types.xml
+++ b/language/types.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Revision: 1.8 $ -->
+<!-- $Revision: 1.9 $ -->
  <chapter id="language.types">
   <title>Types</title>
 
@@ -1239,12 +1239,12 @@ echo "\$foo==$foo; type is " . gettype ($foo) . "<br />\n";
     hashtable (which is an implementation of a map), 
     dictionary, collection,
     stack, queue and probably more. Because you can have another
-    PHP-array as a value, you can also quite easily simulate
+    PHP array as a value, you can also quite easily simulate
     trees.
    </para>
    <para>
-    Explanation of those structures is beyond the scope of this manual,
-    but you'll find at least one example for each of those structures.
+    Explanation of those data structures is beyond the scope of this
+    manual, but you'll find at least one example for each of them.
     For more information we refer you to external literature about
     this broad topic.
    </para>
@@ -1263,13 +1263,11 @@ echo "\$foo==$foo; type is " . gettype ($foo) . "<br />\n";
      </para>
      <para>
       <synopsis>
-array( <optional> <replaceable>key</replaceable> =&gt; </optional> <replaceable
->value</replaceable>
+array( <optional> <replaceable>key</replaceable> =&gt; </optional> <replaceable>value</replaceable>
      , ...
      )
-// <replaceable>key</replaceable> is either <type>string</type
-                        > or nonnegative <type>integer</type>
-// <replaceable>value</replaceable> can be anything
+// <replaceable>key</replaceable> may be an <type>integer</type> or <type>string</type>
+// <replaceable>value</replaceable> may be any value
       </synopsis>
      </para>
      <para>
@@ -1287,13 +1285,14 @@ echo $arr[12];    // 1
       </informalexample>
      </para>
      <para>
-      A <varname>key</varname> is either an <type>integer</type> 
-      or a <type>string</type>. If a key is the standard representation
-      of an <type>integer</type>, it will be interpreted as such (i.e.
-      <literal>"8"</literal> will be interpreted as <literal>8</literal>,
-      while <literal>"08"</literal> will be interpreted as
+      A <varname>key</varname> may be either an
+      <literal>integer</literal> or a <type>string</type>. If a key is
+      the standard representation of an <type>integer</type>, it will
+      be interpreted as such (i.e.  <literal>"8"</literal> will be
+      interpreted as <literal>8</literal>, while
+      <literal>"08"</literal> will be interpreted as
       <literal>"08"</literal>). There are no different indexed and
-      associative array types in PHP, there is only one array type,
+      associative array types in PHP; there is only one array type,
       which can both contain integer and string indices.
      </para>
      <para>
@@ -1313,13 +1312,14 @@ echo $arr["somearray"]["a"];  // 42
       </informalexample>
      </para>
      <para>
-      If you omit a key, the maximum of the integer-indices is taken, and
-      the new key will be that maximum + 1. As integers can be negative,
-      this is also true for negative indices. Having e.g. the highest index
-      being <literal>-6</literal> will result in <literal>-5</literal> being 
-      the new key. If no integer-indices exist
-      yet, the key will be <literal>0</literal> (zero). If you specify a key
-      that already has a value assigned to it, that value will be overwritten.
+      If you do not specify a key for a given value, then the maximum
+      of the integer indices is taken, and the new key will be that
+      maximum value + 1--unless that maximum value is negative (is it
+      perfectly legal to have negative array indices). In this case,
+      the new key will be <literal>0</literal>.  If no integer indices
+      exist yet, the key will be <literal>0</literal> (zero). If you
+      specify a key that already has a value assigned to it, that
+      value will be overwritten.
       <informalexample>
        <programlisting role="php">
 <![CDATA[
@@ -1335,13 +1335,13 @@ array(5 => 43, 6 => 32, 7 => 56, "b" => 12);
       </informalexample>
      </para>
      <para>
-      Using &true; as a key will evalute to
-      <type>integer</type> <literal>1</literal> as key. Using
-      &false; as a key will evalute to <type>integer</type>
-      <literal>0</literal> as key. Using <literal>NULL</literal> as a key
-      will evaluate to an empty string. Using an emptry string as key will
-      create (or overwrite) a key with an empty string and its value, it is
-      not the same as using empty brackets.
+      Using &true; as a key will evaluate to <type>integer</type>
+      <literal>1</literal> as key. Using &false; as a key will evaluate
+      to <type>integer</type> <literal>0</literal> as key. Using
+      <literal>NULL</literal> as a key will evaluate to the empty
+      string. Using the empty string as key will create (or overwrite)
+      a key with the empty string and its value; it is not the same as
+      using empty brackets.
      </para>
      <para>
       You cannot use arrays or objects as keys. Doing so will result in a
@@ -1352,19 +1352,18 @@ array(5 => 43, 6 => 32, 7 => 56, "b" => 12);
     <sect3 id="language.types.array.syntax.modifying">
      <title>Creating/modifying with square-bracket syntax</title>
      <para>
-      You can also modify an existing array, by explicitly setting
+      You can also modify an existing array by explicitly setting
       values in it.
      </para>
      <para>
       This is done by assigning values to the array while specifying the 
       key in brackets. You can also omit the key, add an empty pair
-      of brackets ("<literal>[]</literal>") to the variable-name in that case.
+      of brackets ("<literal>[]</literal>") to the variable name in that case.
       <synopsis>
 $arr[<replaceable>key</replaceable>] = <replaceable>value</replaceable>;
 $arr[] = <replaceable>value</replaceable>;
-// <replaceable>key</replaceable> is either <type>string</type
-                        > or nonnegative <type>integer</type>
-// <replaceable>value</replaceable> can be anything
+// <replaceable>key</replaceable> may be an <type>integer</type> or <type>string</type>
+// <replaceable>value</replaceable> may be any value
       </synopsis>
       If <varname>$arr</varname> doesn't exist yet, it will be created. 
       So this is also an alternative way to specify an array.
@@ -1393,23 +1392,78 @@ unset($arr);    // This deletes the whole array
      </para>
      <note>
       <para>
-       If you omit a key, the maximum of the integer-indices is taken, and
-       the new key will be that maximum + 1.  
-       Note that the maximum is same when the element having
-       maximum-index was cleared using <function>unset</function> function.
-       <informalexample>
-        <programlisting role="php">
+       As mentioned above, if you provide the brackets with no key
+       specified, then the maximum of the existing integer indices is
+       taken, and the new key will be that maximum value + 1--unless
+       that maximum value is negative (is it perfectly legal to have
+       negative array indices). In this case, the new key will be
+       <literal>0</literal>.  If no integer indices exist yet, the key
+       will be <literal>0</literal> (zero). If you specify a key that
+       already has a value assigned to it, that value will be
+       overwritten. 
+      </para>
+      <para>
+       Note that the maximum integer key used for this <emphasis>need
+       not currently exist in the array</emphasis>. It simply must
+       have existed in the array at some time since the last time the
+       array was re-indexed. The following example illustrates:
+      </para>
+
+      <informalexample>
+       <programlisting role="php">
 <![CDATA[
 <?php
-$a = array("orange","apple","banana");
-unset($a[2]); // clear $a[2]
-$a[] = 'carrot'; // assign a new value without key 
-var_dump($a); // output: array(0 => 'orange', 1 => 'apple', 3 => 'carrot')
+// Create a simple array.
+$array = array(1, 2, 3, 4, 5);
+print_r($array);
+
+// Now delete every item, but leave the array itself intact:
+foreach ($array as $i => $value) {
+    unset($array[$i]);
+}
+print_r($array);
+
+// Append an item (note that the new key is 5, instead of 0 as you
+// might expect).
+$array[] = 6;
+print_r($array);
+
+// Re-index:
+$array = array_values($array);
+$array[] = 7;
+print_r($array);
 ?>
 ]]> 
-        </programlisting>
-       </informalexample>       
-      </para>
+       </programlisting>
+       <para>
+        The above example would produce the following output:
+        <screen>
+<![CDATA[
+Array
+(
+    [0] => 1
+    [1] => 2
+    [2] => 3
+    [3] => 4
+    [4] => 5
+)
+Array
+(
+)
+Array
+(
+    [5] => 6
+)
+Array
+(
+    [0] => 6
+    [1] => 7
+)
+]]>
+        </screen>
+       </para>
+      </informalexample>       
+
      </note>
     </sect3>
    </sect2><!-- end syntax -->
@@ -1417,9 +1471,8 @@ var_dump($a); // output: array(0 => 'orange', 1 => 'apple', 3 => 'carrot')
    <sect2 id="language.types.array.useful-funcs">
     <title>Useful functions</title>
     <para>
-     There are quite some useful function for working
-     with arrays, see the <link linkend="ref.array">array
-     functions</link> section.
+     There are quite a few useful functions for working with arrays.
+     See the <link linkend="ref.array">array functions</link> section.
     </para>
     <note>
      <para>
@@ -1461,9 +1514,10 @@ $b = array_values($a);
     <sect3 id="language.types.array.foo-bar">
      <title>Why is <literal>$foo[bar]</literal> wrong?</title>
      <para>
-      You should always use quotes around an associative array index.
-      For example, use $foo['bar'] and not $foo[bar]. But why is $foo[bar]
-      wrong? You might have seen the following syntax in old scripts:
+      You should always use quotes around a string literal
+      array index.  For example, use $foo['bar'] and not
+      $foo[bar]. But why is $foo[bar] wrong? You might have seen the
+      following syntax in old scripts:
       <informalexample>
        <programlisting role="php">
 <![CDATA[
@@ -1475,13 +1529,69 @@ echo $foo[bar];
 ]]>
        </programlisting>
       </informalexample>
-      This is wrong, but it works. Then, why is it wrong? The reason is that
-      this code has an undefined constant (bar) rather than a string ('bar' -
-      notice the quotes), and PHP may in future define constants which,
-      unfortunately for your code, have the same name.  It works, because the
-      undefined constant gets converted to a string of the same name
-      automatically for backward compatibility reasons. 
+      This is wrong, but it works. Then, why is it wrong? The reason
+      is that this code has an undefined constant (bar) rather than a
+      string ('bar' - notice the quotes), and PHP may in future define
+      constants which, unfortunately for your code, have the same
+      name.  It works because PHP automatically converts a
+      <emphasis>bare string</emphasis> (an unquoted string which does
+      not correspond to any known symbol) into a string which contains
+      the bare string. For instance, if there is no defined constant
+      named <constant>bar</constant>, then PHP will substitute in the
+      string <literal>'bar'</literal> and use that.
      </para>
+     <note>
+      <simpara>
+       This does not mean to <emphasis>always</emphasis> quote the
+       key. You do not want to quote keys which are <link
+       linkend="language.constants">constants</link> or <link
+       linkend="language.variables">variables</link>, as this will
+       prevent PHP from interpreting them.
+      </simpara>
+      <informalexample>
+       <programlisting role="php">
+<![CDATA[
+<?php
+error_reporting(E_ALL);
+ini_set('display_errors', true);
+ini_set('html_errors', false);
+// Simple array:
+$array = array(1, 2);
+$count = count($array);
+for ($i = 0; $i < $count; $i++) {
+    echo "\nChecking $i: \n";
+    echo "Bad: " . $array['$i'] . "\n";
+    echo "Good: " . $array[$i] . "\n";
+    echo "Bad: {$array['$i']}\n";
+    echo "Good: {$array[$i]}\n";
+}
+?>
+]]>
+       </programlisting>
+      </informalexample>
+      <para>
+       The output from the above is:
+       <screen>
+<![CDATA[
+Checking 0: 
+Notice: Undefined index:  $i in /path/to/script.html on line 9
+Bad: 
+Good: 1
+Notice: Undefined index:  $i in /path/to/script.html on line 11
+Bad: 
+Good: 1
+
+Checking 1: 
+Notice: Undefined index:  $i in /path/to/script.html on line 9
+Bad: 
+Good: 2
+Notice: Undefined index:  $i in /path/to/script.html on line 11
+Bad: 
+Good: 2
+]]>        
+       </screen>
+      </para>
+     </note>
      <para>
       More examples to demonstrate this fact:
       <informalexample>
@@ -1505,7 +1615,7 @@ print $arr[fruit];    // apple
 
 // Let's define a constant to demonstrate what's going on.  We
 // will assign value 'veggie' to a constant named fruit.
-define('fruit','veggie');
+define('fruit', 'veggie');
 
 // Notice the difference now
 print $arr['fruit'];  // apple
@@ -1541,10 +1651,11 @@ print "Hello " . $arr['fruit']; // Hello apple
       error_reporting</link> is turned down to not show them.
      </para>
      <para>
-      As stated in the <link linkend="language.types.array.syntax"
-      >syntax</link> section, there must be an expression between the 
-      square brackets ('<literal>[</literal>' and '<literal>]</literal>').
-      That means that you can write things like this:
+      As stated in the <link
+      linkend="language.types.array.syntax">syntax</link> section,
+      there must be an expression between the square brackets
+      ('<literal>[</literal>' and '<literal>]</literal>').  That means
+      that you can write things like this:
       <informalexample>
        <programlisting role="php">
 <![CDATA[
@@ -1810,7 +1921,7 @@ Array
 <![CDATA[
 // fill an array with all items from a directory
 $handle = opendir('.');
-while ($file = readdir($handle)) {
+while (false !== ($file = readdir($handle))) {
     $files[] = $file;
 }
 closedir($handle); 
@@ -1820,13 +1931,13 @@ closedir($handle);
     </example>
     <para>
      Arrays are ordered. You can also change the order using various
-     sorting-functions. See the <link linkend="ref.array">array
+     sorting functions. See the <link linkend="ref.array">array
      functions</link> section for more information. You can count
      the number of items in an array using the
      <function>count</function> function.
     </para>
     <example>
-     <title>Sorting array</title>
+     <title>Sorting an array</title>
      <programlisting role="php">
 <![CDATA[
 <?php
@@ -1837,7 +1948,7 @@ print_r($files);
      </programlisting>
     </example>
     <para>
-     Because the value of an array can be everything, it can also be 
+     Because the value of an array can be anything, it can also be
      another array. This way you can make recursive and
      multi-dimensional arrays.
     </para>
@@ -1875,7 +1986,7 @@ $juices["apple"]["green"] = "good";
      </programlisting>
     </example>
     <para>
-     You should be aware, that array assignment always involves
+     You should be aware that array assignment always involves
      value copying. You need to use the reference operator to copy
      an array by reference.
      <informalexample>
@@ -1885,7 +1996,7 @@ $juices["apple"]["green"] = "good";
 $arr1 = array(2, 3);
 $arr2 = $arr1;
 $arr2[] = 4; // $arr2 is changed,
-             // $arr1 is still array(2,3)
+             // $arr1 is still array(2, 3)
              
 $arr3 = &$arr1;
 $arr3[] = 4; // now $arr1 and $arr3 are the same
